# plot_publisher

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
src/plot_publisherpy/: __init__.py  _version.py  configuration.py  plot_publisher.py
tests/: test_publish.py
